test/errors/ltac/end1.ls

#OUTPUT
#Syntax Error: Expected return in function: main
# -> [14] end
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    int x = 10
end

